@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>cryptomator</artifactId>
-	<version>1.6.17</version>
+	<version>1.7.0</version>
 	<name>Cryptomator Desktop App</name>
 
 	<organization>
@@ -24,48 +24,49 @@
 		<project.jdk.version>19</project.jdk.version>
 
 		<!-- Group IDs of jars that need to stay on the class path for now -->
-		<nonModularGroupIds>com.github.serceman,com.github.jnr,org.ow2.asm,net.java.dev.jna,org.apache.jackrabbit,org.apache.httpcomponents,de.swiesend,org.purejava,com.github.hypfvieh</nonModularGroupIds>
+		<!-- Once hypfvieh, swiesend, purejava and integrations-linux have module-info, remove them-->
+		<nonModularGroupIds>org.ow2.asm,org.apache.jackrabbit,org.apache.httpcomponents,de.swiesend,org.purejava,com.github.hypfvieh</nonModularGroupIds>
 
 		<!-- cryptomator dependencies -->
 		<cryptomator.cryptolib.version>2.1.1</cryptomator.cryptolib.version>
-		<cryptomator.cryptofs.version>2.5.3</cryptomator.cryptofs.version>
-		<cryptomator.integrations.version>1.2.0-beta1</cryptomator.integrations.version>
-		<cryptomator.integrations.win.version>1.1.2</cryptomator.integrations.win.version>
-		<cryptomator.integrations.mac.version>1.1.2</cryptomator.integrations.mac.version>
-		<cryptomator.integrations.linux.version>1.1.0</cryptomator.integrations.linux.version>
-		<cryptomator.fuse.version>1.3.4</cryptomator.fuse.version>
-		<cryptomator.dokany.version>1.3.3</cryptomator.dokany.version>
-		<cryptomator.webdav.version>1.2.8</cryptomator.webdav.version>
+		<cryptomator.cryptofs.version>2.6.1</cryptomator.cryptofs.version>
+		<cryptomator.integrations.version>1.2.0</cryptomator.integrations.version>
+		<cryptomator.integrations.win.version>1.2.0</cryptomator.integrations.win.version>
+		<cryptomator.integrations.mac.version>1.2.0</cryptomator.integrations.mac.version>
+		<cryptomator.integrations.linux.version>1.2.0</cryptomator.integrations.linux.version>
+		<cryptomator.fuse.version>2.0.2</cryptomator.fuse.version>
+		<cryptomator.dokany.version>2.0.0</cryptomator.dokany.version>
+		<cryptomator.webdav.version>2.0.0</cryptomator.webdav.version>
 
 		<!-- 3rd party dependencies -->
 		<commons-lang3.version>3.12.0</commons-lang3.version>
-		<dagger.version>2.44</dagger.version>
+		<dagger.version>2.45</dagger.version>
 		<easybind.version>2.2</easybind.version>
 		<guava.version>31.1-jre</guava.version>
-		<gson.version>2.9.1</gson.version>
-		<javafx.version>19</javafx.version>
-		<jwt.version>4.2.1</jwt.version>
-		<nimbus-jose.version>9.25.4</nimbus-jose.version>
-		<logback.version>1.4.4</logback.version>
-		<slf4j.version>2.0.3</slf4j.version>
+		<gson.version>2.10.1</gson.version>
+		<javafx.version>19.0.2.1</javafx.version>
+		<jwt.version>4.3.0</jwt.version>
+		<nimbus-jose.version>9.31</nimbus-jose.version>
+		<logback.version>1.4.5</logback.version>
+		<slf4j.version>2.0.6</slf4j.version>
 		<tinyoauth2.version>0.5.1</tinyoauth2.version>
 		<zxcvbn.version>1.7.0</zxcvbn.version>
 
 		<!-- test dependencies -->
-		<junit.jupiter.version>5.9.1</junit.jupiter.version>
-		<mockito.version>4.8.0</mockito.version>
+		<junit.jupiter.version>5.9.2</junit.jupiter.version>
+		<mockito.version>5.1.1</mockito.version>
 		<hamcrest.version>2.2</hamcrest.version>
 
 		<!-- build-time dependencies -->
 		<jetbrains.annotations.version>23.0.0</jetbrains.annotations.version>
-		<dependency-check.version>7.4.0</dependency-check.version>
+		<dependency-check.version>8.1.0</dependency-check.version>
 		<jacoco.version>0.8.8</jacoco.version>
 	</properties>
 
 	<dependencies>
 		<!-- Cryptomator Libs -->
 		<dependency>
-			<!-- needed due to https://github.com/cryptomator/cryptolib/issues/34-->
+			<!-- needed due to https://github.com/cryptomator/cryptolib/issues/34 -->
 			<groupId>org.cryptomator</groupId>
 			<artifactId>cryptolib</artifactId>
 			<version>${cryptomator.cryptolib.version}</version>
@@ -314,6 +315,7 @@
 					<compilerArgs>
 						<arg>-Adagger.fastInit=enabled</arg>
 						<arg>-Adagger.formatGeneratedSource=enabled</arg>
+						<arg>--enable-preview</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
